lib/src/compiler/tests/testdata/errors/105.out
error[E123]: invalid pattern `$a`
 --> line:3:13
  |
3 |   $a = { 01 [0] 02 }
  |             ^^^ zero-length jumps are useless, remove it
  |